@@ -148,6 +148,9 @@ function(db)
                              "[[:space:]]*,[[:space:]]*"),
                 function(s) s[grepl("^R[[:space:]]*\\(", s)])
     lens <- sapply(x, length)
+    pos <- which(lens > 0L)
+    if(!length(pos)) return(db)
+    lens <- lens[pos]    
     ## Unlist.
     x <- unlist(x)
     pat <- "^R[[:space:]]*\\(([[<>=!]+)[[:space:]]+(.*)\\)[[:space:]]*"
@@ -163,8 +166,6 @@ function(db)
         res[ops == op] <- do.call(op, list(v_c, v_t[[op]]))
     ## And assemble test results according to the rows of db.
     ind <- rep.int(TRUE, NROW(db))
-    pos <- which(lens > 0L)
-    lens <- lens[pos]
     ind[pos] <- sapply(split(res, rep.int(seq_along(lens), lens)), all)
     db[ind, , drop = FALSE]
 }
